implemented endpoint for creation data of sensitive record with id
