# generated/openapi/types.go
@@ -15,6 +15,11 @@ const (
 	Text        SensitiveRecordTypeEnum = "text"
 )
 
+// CreateSensitiveRecordDataResponse defines model for CreateSensitiveRecordDataResponse.
+type CreateSensitiveRecordDataResponse struct {
+	Message string `json:"message"`
+}
+
 // CreateSensitiveRecordRequest defines model for CreateSensitiveRecordRequest.
 type CreateSensitiveRecordRequest struct {
 	Metadata string                  `json:"metadata"`
